--- a/ww_edit/themes/desktop/structure.css
+++ b/ww_edit/themes/desktop/structure.css
@@ -12,7 +12,9 @@ body {
 	min-height: 100%;
 	margin: 0 auto;
 	text-align: left;
-	width: 100%;
+	/*width: 100%;*/
+	min-width: 960px;
+	
 }
 #inner_wrapper {
 	min-height: 100%;
