--- a/ww_view/themes/default/iphone.css
+++ b/ww_view/themes/default/iphone.css
@@ -3,7 +3,7 @@ body {
 }
 #header {
 	height: auto;
-	background-color: #ccc;
+	background-color: #333;
 	padding: 8px;
 	border-bottom: solid 2px #000;
 }
@@ -34,10 +34,13 @@ body {
 
 h1 {
 	font-size: 1.125em;
-	margin: 4px 8px;
+	margin: 4px 0px;
 }
 h2 {
 	font-size: 1.0em;
+}
+.article_wrapper {
+	padding: 8px;
 }
 .snippet {
 	margin: 8px;
