--- a/ww_view/themes/default/style.css
+++ b/ww_view/themes/default/style.css
@@ -104,9 +104,9 @@ p, ul, ol, blockquote {
 #header_panel {
 	width: 200px;
 	height: 120px;
-	background-image: url('_img/ww-logo-120-red25.png');
+	background-image: url('_img/ww-90.png');
 	background-repeat: no-repeat;
-	background-position: center top;
+	background-position: 50% 30px;
 }
 
 /*
