front page nav for months

--- a/ww_view/themes/default/style.css
+++ b/ww_view/themes/default/style.css
@@ -525,6 +525,9 @@ div#comment_errors ul li{
 	border: solid 1px #eee;
 	background-color: #fff;
 }
+#page_nav.front_page_nav span {	
+	width: 25%;
+}
 #page_nav span#previous{
 	float: left;	
 }
